--- a/VitalzApp/app/src/main/res/layout/fragment_single_paitent_dashboard.xml
+++ b/VitalzApp/app/src/main/res/layout/fragment_single_paitent_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,167 +7,171 @@
     android:background="@mipmap/vitalz">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/app_bar_layout"
-            style="@style/titleBar"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/iv_vitalz_name"
-                style="@style/backBtn"
-                android:contentDescription="@string/back_btn"
-                android:src="@drawable/ic_vital_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_ble"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
-
-            <ImageView
-                android:id="@+id/iv_remote_icon"
-                style="@style/dashboard_ble"
-                android:contentDescription="@string/remote_icon"
-                android:src="@drawable/ic_ble_battery"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_time_left"
-                style="@style/dashboard_ble"
-                android:hint="@string/fake_time_left"
-                android:text=""
-                android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/iv_remote_icon"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_time_left_unit"
-                style="@style/dashboard_ble_battery"
-                app:layout_constraintStart_toEndOf="@+id/tv_time_left"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/iv_connectivity_icon"
-                style="@style/dashboard_ble"
-                android:layout_marginEnd="@dimen/dp_20"
-                android:contentDescription="@string/remote_icon"
-                android:src="@drawable/ic_connectivity_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <TextView
-            android:id="@+id/tv_selected_patient"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_16"
-            android:layout_marginTop="@dimen/dp_16"
-            android:text="@string/sample_patient_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@id/layout_dashboard"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_ble"
-            app:layout_constraintVertical_bias="0.0" />
+        android:id="@+id/app_bar_layout"
+        style="@style/titleBar"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/iv_view_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="@dimen/dp_16"
-            android:src="@drawable/ic_edit_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_ble" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/pie_chart_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_16"
-            android:background="@color/white"
-            android:padding="@dimen/dp_16"
+            android:id="@+id/iv_vitalz_name"
+            style="@style/backBtn"
+            android:contentDescription="@string/back_btn"
+            android:src="@drawable/ic_vital_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_view_profile">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/display_heart_chart"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_30"
-                android:src="@drawable/iv_heart_rate"
-                app:layout_constraintEnd_toStartOf="@+id/pie_chart_heart_layout"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/button_Red" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/pie_chart_heart_layout"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_50"
-                android:layout_marginStart="@dimen/dp_16"
-                app:layout_constraintBottom_toBottomOf="@+id/display_heart_chart"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_weight="9"
-                app:layout_constraintStart_toEndOf="@+id/display_heart_chart"
-                app:layout_constraintTop_toTopOf="@+id/display_heart_chart" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_ble"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">
 
-            <ImageView
-                android:id="@+id/display_respiratory_chart"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_30"
-                android:layout_marginTop="@dimen/dp_16"
-                android:src="@drawable/ic__respiratory"
-                app:layout_constraintEnd_toStartOf="@+id/pie_chart_respiratory_layout"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/display_heart_chart"
-                app:tint="@android:color/holo_blue_light" />
+        <ImageView
+            android:id="@+id/iv_remote_icon"
+            style="@style/dashboard_ble"
+            android:contentDescription="@string/remote_icon"
+            android:src="@drawable/ic_ble_battery"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/pie_chart_respiratory_layout"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_50"
-                android:layout_marginStart="@dimen/dp_16"
-                app:layout_constraintBottom_toBottomOf="@+id/display_respiratory_chart"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintHorizontal_weight="9"
-                app:layout_constraintStart_toEndOf="@+id/display_respiratory_chart"
-                app:layout_constraintTop_toTopOf="@+id/display_respiratory_chart" />
+        <TextView
+            android:id="@+id/tv_time_left"
+            style="@style/dashboard_ble"
+            android:hint="@string/fake_time_left"
+            android:text=""
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@+id/iv_remote_icon"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_time_left_unit"
+            style="@style/dashboard_ble_battery"
+            app:layout_constraintStart_toEndOf="@+id/tv_time_left"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_connectivity_icon"
+            style="@style/dashboard_ble"
+            android:layout_marginEnd="@dimen/dp_20"
+            android:contentDescription="@string/remote_icon"
+            android:src="@drawable/ic_connectivity_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/tv_selected_patient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_16"
+        android:text="@string/sample_patient_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@id/pie_chart_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_ble"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/iv_view_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="@dimen/dp_16"
+        android:src="@drawable/ic_edit_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_ble" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/pie_chart_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_16"
+        android:background="@color/white"
+        android:padding="@dimen/dp_16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_view_profile">
+
+        <ImageView
+            android:id="@+id/display_heart_chart"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_30"
+            android:src="@drawable/iv_heart_rate"
+            app:layout_constraintEnd_toStartOf="@+id/pie_chart_heart_layout"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/button_Red" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/pie_chart_heart_layout"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_50"
+            android:layout_marginStart="@dimen/dp_16"
+            app:layout_constraintBottom_toBottomOf="@+id/display_heart_chart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_weight="9"
+            app:layout_constraintStart_toEndOf="@+id/display_heart_chart"
+            app:layout_constraintTop_toTopOf="@+id/display_heart_chart" />
+
+        <ImageView
+            android:id="@+id/display_respiratory_chart"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_30"
+            android:layout_marginTop="@dimen/dp_16"
+            android:src="@drawable/ic__respiratory"
+            app:layout_constraintEnd_toStartOf="@+id/pie_chart_respiratory_layout"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/display_heart_chart"
+            app:tint="@android:color/holo_blue_light" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/pie_chart_respiratory_layout"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_50"
+            android:layout_marginStart="@dimen/dp_16"
+            app:layout_constraintBottom_toBottomOf="@+id/display_respiratory_chart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_weight="9"
+            app:layout_constraintStart_toEndOf="@+id/display_respiratory_chart"
+            app:layout_constraintTop_toTopOf="@+id/display_respiratory_chart" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/layout_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/dp_16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pie_chart_layout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_dashboard"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pie_chart_layout">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_heart_rate"
@@ -487,6 +491,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
